@@ -1,7 +1,8 @@
 Release notes for SIP Express Router (ser)
 ***********************************************
 
-$Id: NEWS,v 1.68 2007/07/30 20:38:44 andrei Exp $
+$Id: NEWS,v 1.69 2007/08/27 23:05:59 andrei Exp $
+
 
 
 2.1.0 changes
@@ -104,6 +105,7 @@ core:
                long held locks, almost no performance impact otherwise)
 
 new config variables:
+  pmtu_discovery = 0 | 1 (default 0) - set DF bit in outbound IP if enabled
   dns_srv_lb = yes | no (default no) - enable dns srv weight based load 
     balancing (see doc/dns.txt)
   dns_try_naptr = yes | no (default no) - enable naptr support 
